CSS545 Assignment 1 - Hello World Generate a random number and calculate the square of the number.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="text_lucky_num">Your Lucky Number is:</string>
+    <string name="text_lucky_num_square">The square of your Lucky Number is:</string>
+    <string name="button_gen_num">Generate Lucky Number</string>
+    <string name="button_calculate_result">Calculate the square value</string>
+    <string name="button_back">Back</string>
 </resources>
